--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -4,7 +4,7 @@ WORKDIR /app
 
 COPY ["package.json","package-lock.json","./"]
 
-RUN npm install
+RUN npm ci
 
 COPY ["public","./public"]
 COPY ["src","./src"]
@@ -16,10 +16,18 @@ ENV NODE_ENV=production
 RUN npm run build
 
 FROM nginx:stable-alpine
+
+# Security: Disable server tokens in nginx main config
+RUN sed -i 's/# server_tokens off;/server_tokens off;/' /etc/nginx/nginx.conf || true
+
 COPY --from=builder /app/dist /usr/share/nginx/html
 COPY nginx.conf /etc/nginx/conf.d/default.conf
 
 EXPOSE 3000
+
+# Healthcheck for container orchestration
+HEALTHCHECK --interval=30s --timeout=3s --start-period=5s --retries=3 \
+    CMD wget --no-verbose --tries=1 --spider http://localhost:3000/ || exit 1
 
 CMD ["nginx", "-g", "daemon off;"]
 
