--- a/client/nginx.conf
+++ b/client/nginx.conf
@@ -1,8 +1,31 @@
 server {
-    listen 3000;server_name localhost;
+    listen 3000;
+    server_name localhost;
+    
+    # Security headers
+    add_header X-Frame-Options "DENY" always;
+    add_header X-Content-Type-Options "nosniff" always;
+    add_header X-XSS-Protection "1; mode=block" always;
+    add_header Referrer-Policy "strict-origin-when-cross-origin" always;
+    add_header Permissions-Policy "geolocation=(), microphone=(), camera=()" always;
+    
+    # Disable server version disclosure
+    server_tokens off;
+
     location / {
         root /usr/share/nginx/html;
         index index.html;
         try_files $uri $uri/ /index.html;
+        
+        # Cache static assets
+        location ~* \.(js|css|png|jpg|jpeg|gif|ico|svg|woff|woff2)$ {
+            expires 1y;
+            add_header Cache-Control "public, immutable";
+        }
+    }
+    
+    # Deny access to hidden files
+    location ~ /\. {
+        deny all;
     }
 }
