--- a/server/sample.env
+++ b/server/sample.env
@@ -5,11 +5,19 @@ AWS_CLIENT_REGION_123456 = us-east-1,eu-central-1
 #========== repeat the same for other accounts , if you have many accounts===========
 
 # For first time setup, you can use these credentials to login in client
+# IMPORTANT: Change these defaults immediately in production!
 S3XPLORER_ADMIN=admin@admin.com
-S3XPLORER_ADMIN_PASS=12345
+S3XPLORER_ADMIN_PASS=ChangeThisSecurePassword123!
+
+# JWT secret - MUST be a strong random string (min 32 chars recommended)
+# Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
+JWT_SECRET=replace-with-64-char-random-hex-string
 
 # server port
 PORT=5000
+
+# Frontend URL for CORS (comma-separated for multiple origins)
+FRONTEND_CLIENT=http://localhost:3000
 
 # postgres database creds.
 DB_HOST=localhost
