refactor: update environment configuration and improve defaults; add railway.json and railway.toml for deployment setup

--- a/server/sample.env
+++ b/server/sample.env
@@ -1,34 +1,42 @@
-#=========== If your aws account id is = 123456 ====================================
-AWS_CLIENT_ID_123456 = Adkjkdsdjskdskjdskdsjdsk
-AWS_CLIENT_SECRET_123456 = laksslkdlskdslkldwiyuewuwrwejhkjh343h4j3h4j34jhsjjhdjs
-AWS_CLIENT_REGION_123456 = us-east-1,eu-central-1
-#========== repeat the same for other accounts , if you have many accounts===========
+# S3Spider Server Configuration
+# All variables have sane defaults - only set what you need to override
 
-# For first time setup, you can use these credentials to login in client
-# IMPORTANT: Change these defaults immediately in production!
-S3XPLORER_ADMIN=admin@admin.com
-S3XPLORER_ADMIN_PASS=ChangeThisSecurePassword123!
+#=========== AWS Account Configuration ==========================================
+# For each AWS account, add these three variables with the account ID suffix
+# Example for account 123456:
+# AWS_CLIENT_ID_123456=AKIAXXXXXXXXXXXXXXXX
+# AWS_CLIENT_SECRET_123456=your-secret-key-here
+# AWS_CLIENT_REGION_123456=us-east-1,eu-central-1
 
-# JWT secret - MUST be a strong random string (min 32 chars recommended)
+#=========== Admin Credentials ==================================================
+# Default: admin@s3spider.local / admin1234
+# S3XPLORER_ADMIN=admin@s3spider.local
+# S3XPLORER_ADMIN_PASS=admin1234
+
+#=========== Security ===========================================================
+# JWT secret - defaults to dev secret, OVERRIDE IN PRODUCTION!
 # Generate with: node -e "console.log(require('crypto').randomBytes(64).toString('hex'))"
-JWT_SECRET=replace-with-64-char-random-hex-string
+# JWT_SECRET=your-64-char-secret-here
 
-# server port
-PORT=5000
+#=========== Server =============================================================
+# PORT=5000
 
-# Frontend URL for CORS (comma-separated for multiple origins)
-FRONTEND_CLIENT=http://localhost:3000
+#=========== Frontend CORS ======================================================
+# Default: * (allow all) - set to your frontend URL in production
+# FRONTEND_CLIENT=https://your-frontend.railway.app
 
-# postgres database creds.
-DB_HOST=localhost
-DB_PORT=5432
-DB_NAME=s3explorer
-DB_USER=postgres
-DB_PASS=postgres
+#=========== PostgreSQL Database ================================================
+# These defaults work with standard PostgreSQL setup
+# DB_HOST=localhost
+# DB_PORT=5432
+# DB_NAME=s3explorer
+# DB_USER=postgres
+# DB_PASS=postgres
 
-# redis cache
-CACHE_ENABLED=true
-CACHE_HOST=cache
-CACHE_USER=redis
-CACHE_PASS=redis
-CACHE_PORT=6379
+#=========== Redis Cache (Optional) =============================================
+# Cache is DISABLED by default
+# CACHE_ENABLED=false
+# CACHE_HOST=localhost
+# CACHE_PORT=6379
+# CACHE_USER=default
+# CACHE_PASS=redis
